--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Struttura Discord</title>
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!--Intestazione-->
     <header>
         <div class="nav-bar width">
-                <div class="nav-logo">logo</div>
-                <div class="nav-link">link</div>
-                <div class="nav-login">login</div>
+                <div class="nav-logo">
+                    <img id="img-logo" src="img/logo.svg" alt="Logo Discord">
+                </div>
+                <div class="nav-link">
+                    <a href="">Scarica</a>
+                    <a href="">Perchè Discord</a>
+                    <a href="">Nitro</a>
+                    <a href="">Sicurezza</a>
+                    <a href="">Assistenza</a>
+                </div>
+                <div class="nav-login">
+                    <button class="accedi">Accedi</button>
+                </div>
         </div>
         <div class="spotlight">
-            <div class="spotmain"></div>
+            <div class="spotmain">
+                <h1>Il tuo posto per parlare</h1>
+                <p class="spot">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica <br>
+                mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo <br>
+                assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso. </p>
+                <button class="spotbottom"> <i class="fa-solid fa-down-long"></i>Scarica per Mac</button>
+                <button class="spotbottom bg-black">Apri Discord nel tuo browser</button>
+            
+            </div>
         </div>
     </header>
 
