--- a/index.html
+++ b/index.html
@@ -42,19 +42,43 @@
     <!--Contenuto Principale-->
     <main>
         <div class="main-section">
-            <div class="img-section"></div>
-            <div class="text-section"></div>
+            <div class="img-section">
+                <img class="img-main" src="img/item1.svg" alt="Immagine">
+            </div>
+            <div class="text-section">
+                <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
         </div>
         <div class="central-section">
-            <div class="text-section"></div>
-            <div class="img-section"></div>
+            <div class="text-section">
+                <h2>Dove trovarsi è facile</h2>
+                <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+                
+                </p>
+
+            </div>
+            <div class="img-section">
+                <img class="img-main" src="img/item2.svg" alt="Immagine">
+            </div>
         </div>
         <div class="main-section">
-            <div class="img-section"></div>
-            <div class="text-section"></div>
+            <div class="img-section">
+                <img class="img-main" src="img/item3.svg" alt="Immagine">
+            </div>
+            <div class="text-section">
+                <h2>Da pochi ad un fandom</h2>
+                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
         </div>
         <div class="big-section">
-            <div class="big-contenuto width"></div>
+            <div class="big-contenuto width">
+                <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video a audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <img class="big-img" src="img/item4-big.svg" alt="Immagine">
+                <h3>Pronto ad iniziare la tua avventura?</h3>
+                <button class="spotbottom bg-button"><i class="fa-solid fa-down-long"></i>Scarica per Mac</button>
+            </div>
         </div>
     </main>
     
