--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p>Video a audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img class="big-img" src="img/item4-big.svg" alt="Immagine">
                 <h3>Pronto ad iniziare la tua avventura?</h3>
-                <button class="spotbottom bg-button"><i class="fa-solid fa-down-long"></i>Scarica per Mac</button>
+                <button class="bg-button"><i class="fa-solid fa-down-long"></i>Scarica per Mac</button>
             </div>
         </div>
     </main>
@@ -85,18 +85,85 @@
     <!--Piè di pagina-->
     <footer>
         <div class="finale width">
-            <div class="contatti"></div>
+            <div class="contatti">
+                <h3 class="h-footer">Il tuo posto per parlare</h3>
+                <div>
+                    <img class="flag" src="img/ita.png" alt="Immagine bandiera">
+                    <span>Italiano &#9662;</span>
+                    <!--Icone social network-->
+                    <div class="social"> 
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-square-youtube"></i>
+                    </div>
+                </div>
+
+
+            </div>
             <div class="info">
-                <div class="colonna"></div>
-                <div class="colonna"></div>
-                <div class="colonna"></div>
-                <div class="colonna"></div>
+                <div class="colonna">
+                    <ul>
+                        <li>
+                            <h4>Prodotto</h4>
+                        </li>
+                        <li>Scarica</li>
+                        <li>Perchè discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+                <div class="colonna">
+                    <ul>
+                        <li>
+                            <h4>Compagnia</h4>
+                        </li>
+                        <li>Chi siamo</li>
+                        <li>Lavora con noi</li>
+                        <li>Marchio</li>
+                        <li>Redazione</li>
+                        <li>Negozio</li>
+                    </ul>
+                </div>
+                <div class="colonna">
+                    <ul>
+                        <li>
+                            <h4>Risorse</h4>
+                        </li>
+                        <li>Scarica</li>
+                        <li>Perchè discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                        <li>Scarica</li>
+                        <li>Perchè discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+                <div class="colonna">
+                    <ul>
+                        <li>
+                            <h4>Norme</h4>
+                        </li>
+                        <li>Scarica</li>
+                        <li>Perchè discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="bottom-bar width">
             <div class="barra width">
-                <div class="bottom-logo">Logo</div>
-                <div class="bottom-logo">Registrati</div>
+                <div class="bottom-logo">
+                    <img id="img-logo" src="img/logo.svg" alt="Logo Discord">
+                </div>
+                <button class="bottom-logo bg-button">Registrati</button>
             </div>    
         </div>
         
