--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="spotlight">
             <div class="spotmain">
                 <h1>Il tuo posto per parlare</h1>
-                <p class="spot">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica <br>
-                mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo <br>
+                <p class="spot">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica 
+                mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo 
                 assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso. </p>
                 <button class="spotbottom"> <i class="fa-solid fa-down-long"></i>Scarica per Mac</button>
                 <button class="spotbottom bg-black">Apri Discord nel tuo browser</button>
